# video-transcriber

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DATABASE_FIX_NOTES.md  DOCKER_VOLUMES.md  Dockerfile  FIX_DATABASE_README.md  Makefile  PYPROJECT_MODERNIZATION.md  README.md  alembic.ini  backup.sh  check_status.sh  cleanup.sh  create_admin.sh  create_user.sh  data-flow-diagram.md  db_status.sh  docker-compose.yml  fix_database.sh  init.sh  migration_plan.md  mypy.ini  ollama-entrypoint.sh  pyproject.toml  requirements.txt  restart.sh  restore.sh  run.py  run_docker.sh  run_local.sh  run_migrations.py  run_migrations_docker.sh  setup-volumes.sh  stop_docker.sh  test_fixes.py  update.sh  video-transcriber-architecture.md  (+6 more)
api-service/: README.md
api-service/api/: database.py  main.py
api-service/api/routes/: api.py
api-service/migrations/versions/: add_pgcrypto_367e4604.py  add_users_table.py  initial_migration.py
common/: README.md  messaging.py  pyproject.toml  setup.py
common/common/: __init__.py  auth.py  config.py  database.py  job_queue.py  models.py  utils.py  worker.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: videoService.js
frontend/src/components/: TranscriptList.jsx  TranscriptList.test.jsx  TranscriptSegment.jsx  TranscriptionJobStatus.jsx  TranslationPanel.jsx  VideoMetadata.jsx  VideoPlayer.jsx  VideoSummary.jsx
frontend/src/pages/: VideoDetailPage.jsx  VideoListPage.jsx
migrations/: env.py
migrations/versions/: add_users_table.py
services/api-service/: Dockerfile  alembic.ini  pyproject.toml
services/api-service/api/: config.py  database.py  job_queue.py  main.py  models.py
services/api-service/api/routes/: api.py
services/api-service/migrations/: env.py
services/api-service/migrations/versions/: add_segments_to_transcripts.py
services/api_service/: Dockerfile  pyproject.toml
services/api_service/api/: __init__.py  config.py  database.py  job_queue.py  main.py  models.py
services/api_service/api/routes/: api.py
services/summarization-service/: Dockerfile  README.md  pyproject.toml
services/summarization-service/summarization/: config.py  main.py  summarization_worker.py  summarizer.py  worker.py
services/summarization_service/: Dockerfile  pyproject.toml
services/summarization_service/summarization/: __init__.py  main.py  summarization_worker.py  summarizer.py  worker.py
services/transcription-service/: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  README_STANDALONE.md  docker-compose.standalone.yml  pyproject.toml  quick_test.py  setup_standalone.sh  standalone_test.py  test_whisperx.py
services/transcription-service/transcription/: api_client.py  config.py  main.py  processor.py  queue_manager.py  transcription_worker.py  utils.py  worker.py
services/transcription_service/: Dockerfile  pyproject.toml  requirements-dev.txt
services/transcription_service/transcription/: api_client.py  config.py  main.py  queue_manager.py  transcription_worker.py  utils.py
services/translation_service/: Dockerfile  pyproject.toml
services/translation_service/translation/: __init__.py  config.py  main.py  translation_worker.py  translator.py
services/watcher-service/: Dockerfile  pyproject.toml
services/watcher-service/watcher/: config.py  watcher.py
services/watcher_service/: Dockerfile  pyproject.toml
services/watcher_service/watcher/: config.py  watcher.py
src/: api.py  auth.py  config.py  database.py  job_queue.py  main.py  models.py  processor.py  schemas.py  summarization_worker.py  summarizer.py  transcription_worker.py  utils.py  watcher.py  worker.py
summarization-service/summarization/: main.py  summarizer.py  worker.py
transcription-service/: README.md  pyproject.toml
transcription-service/transcription/: __init__.py  config.py  transcription_worker.py
vt-cli/: README-SCRIPTS.md  README.md  SCRIPTS.md  database.sh  docker.sh  init.sh  local.sh  user.sh  utils.sh  vt.sh
watcher-service/: Dockerfile  README.md  pyproject.toml
watcher-service/watcher/: __main__.py  watcher.py
