[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.1.0"
description = "Common utilities for Video Transcriber application"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "pika==1.3.2",
]

[tool.setuptools]
py-modules = ["messaging"]
