[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api_service"
version = "0.1.0"
description = "API service for Video Transcriber application"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-multipart>=0.0.5",
    "aiofiles>=0.7.0",
    "sqlalchemy>=1.4.0",
    "pydantic>=1.8.0",
    "psycopg2-binary>=2.9.0",
    "pika==1.3.2",
    "common @ file://../common",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.5b2",
    "isort>=5.9.1",
    "mypy>=0.910",
    "flake8>=6.0.0",
    "pre-commit>=3.3.2",
    "types-requests>=2.31.0",
]

[tool.setuptools]
packages = ["api"]
