[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcription-service"
version = "0.1.0"
description = "Transcription service for Video Transcriber application"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "ffmpeg-python>=0.2.0,<1.0.0",
    "numpy>=1.20.0,<2.0.0",
    "requests>=2.25.0,<3.0.0",
    "pika==1.3.2",
    "common @ file:///Users/tuanvu/Projects/video-transcriber/common",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.5b2",
    "isort>=5.9.1",
    "mypy>=0.910",
]
ml = [
    "torch==1.13.1",
    "torchvision==0.14.1", 
    "torchaudio==0.13.1",
]
audio = [
    "librosa>=0.8.0,<0.11.0",
    "soundfile>=0.10.0,<0.13.0",
    "scipy>=1.7.0,<1.12.0",
    "scikit-learn>=1.0.0,<1.4.0",
    "pyannote.audio==2.1.1",
]
whisper = [
    "faster-whisper>=1.0.0",
    "transformers==4.21.0",
    "datasets>=2.0.0,<3.0.0",
    "evaluate>=0.4.0,<1.0.0",
    "whisperx==3.1.1",
]
all = [
    "transcription-service[ml,audio,whisper]",
]

[tool.setuptools]
packages = ["transcription"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
