[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcription_service"
version = "0.1.0"
description = "Transcription service for Video Transcriber application"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "ffmpeg-python>=0.2.0",
    "requests>=2.25.0",
    "pika==1.3.2",
    "common @ file:///app/common",
    "whisperx==3.3.4",
    "ctranslate2<4.5.0",
    "faster-whisper>=1.1.1",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "onnxruntime>=1.19",
    "pandas>=2.2.3",
    "pyannote-audio>=3.3.2",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "transformers>=4.48.0",
]

[tool.setuptools]
packages = ["transcription"]
