[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "translation_service"
version = "0.1.0"
description = "Translation service for Video Transcriber application"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "requests>=2.26.0",
    "langchain>=0.0.267",
    "langchain-core>=0.1.0",
    "pika==1.3.2",
    "common @ file://../common",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.5b2",
    "isort>=5.9.1",
    "mypy>=0.910",
    "flake8>=6.0.0",
    "pre-commit>=3.3.2",
    "types-requests>=2.31.0",
]

[tool.setuptools]
packages = ["translation"]
