[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watcher-service"
version = "0.1.0"
description = "Video file watcher service for the video transcriber"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "watchdog",
    "requests",
    "common @ file://../common",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]
