[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watcher-service"
version = "0.1.0"
description = "Video file watcher service for the video transcriber"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "watchdog>=2.1.0",
    "requests>=2.25.0",
    "pika==1.3.2",
    "common @ file://../common",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8>=6.0.0",
    "mypy>=0.910",
    "pre-commit>=3.3.2",
    "types-requests>=2.31.0",
]
